tests/NormalTests/paczka1/fuzzy1/23894603.err
Error in line 4: DxCJAbs S864 4,8
Error in line 8: k6jDngc A490 56,2
Error in line 35: k6jDngc A4Q0 74,7
Error in line 28: DxCJAbs S864 51,2
